# solanaceae_vcg

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: cd.yml  ci.yml
plugins/: CMakeLists.txt  plugin_vcg.cpp
res/: aberrations.csv  assassins.csv  bandits.csv  clerics.csv  crafters.csv  cultists.csv  easy_cards.csv  farmers.csv  invaders.csv  junkies.csv  mages.csv  merchants.csv  monsters.csv  nobles.csv  parasites.csv  supporters.csv  thieves.csv
res/decks/: level-25_semi-random_dual-faction.csv  level-25_semi-random_solo-faction.csv  level-open_semi-random_solo-faction.csv
res/factions/: aberrations.csv  bandits.csv  clerics.csv  crafters.csv  easy_cards.csv  farmers.csv  invaders.csv  merchants.csv  nobles.csv  supporters.csv  thieves.csv
src/: CMakeLists.txt
src/solanaceae/vcg/: ability_utils.cpp  ability_utils.hpp  battle.cpp  battle.hpp  card.cpp  card.hpp  csv_to_cpp.cpp  do_ability.hpp  game_state.cpp  game_state.hpp  sp_gui_states.cpp  sp_gui_states.hpp  test1.cpp  test_abilities.cpp  test_battle.cpp  test_parse_abilities.cpp  test_parse_all_cards.cpp  vcg.cpp  vcg.hpp  vcg_sp_gui.cpp  vcg_sp_gui.hpp
src/solanaceae/vcg/cards/: aberrations.cpp  aberrations.hpp  assassins.cpp  assassins.hpp  bandits.cpp  bandits.hpp  clerics.cpp  clerics.hpp  crafters.cpp  crafters.hpp  cultists.cpp  cultists.hpp  easy_cards.cpp  easy_cards.hpp  farmers.cpp  farmers.hpp  invaders.cpp  invaders.hpp  junkies.cpp  junkies.hpp  mages.cpp  mages.hpp  merchants.cpp  merchants.hpp  monsters.cpp  monsters.hpp  nobles.cpp  nobles.hpp  parasites.cpp  parasites.hpp  predefined_decks.cpp  predefined_decks.hpp  random.cpp  random.hpp  thieves.cpp  thieves.hpp
